Updated the org page, added search, fixed overlapping conf.

--- a/NextTechEvent/NextTechEvent/Components/Calendar.razor.css
+++ b/NextTechEvent/NextTechEvent/Components/Calendar.razor.css
@@ -1,4 +1,11 @@
-﻿table {
+﻿.search {
+    padding: 2px 2px 2px 2px;
+    margin: 50px 50px 50px 50px;
+    width: calc(100% - 100px);
+}
+
+
+table {
     width: 100%;
     
 }
