--- a/NextTechEvent/NextTechEvent/Pages/SearchPage.razor.css
+++ b/NextTechEvent/NextTechEvent/Pages/SearchPage.razor.css
@@ -1,5 +1,5 @@
 ﻿.search {
-    width: 100%;
     padding: 2px 2px 2px 2px;
     margin: 50px 50px 50px 50px;
+    width: calc(100% - 100px);
 }
